change sanitization strategy

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,7 +5,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "lib": ["ES2015"]
+    "lib": ["ESNext", "DOM", "DOM.Iterable"]
   },
   "include": ["vite.config.ts"]
 }
